Update quorum model

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,9 +1,12 @@
 [Nodes]
 node1: 127.0.0.1:5555
 node2: 127.0.0.1:5556
+node3: 127.0.0.1:5557
+node4: 127.0.0.1:5558
 
 [General]
-nodes: 2
-quorumsize: 2
+N: 4
+f: 1
+e: 0
 storage_location: ./.storage/
 storage_size: 10
