--- a/config/config.ini
+++ b/config/config.ini
@@ -1,12 +1,13 @@
 [Nodes]
-node1: 127.0.0.1:5555
-node2: 127.0.0.1:5556
-node3: 127.0.0.1:5557
-node4: 127.0.0.1:5558
+node0 = 127.0.0.1:5550
+node1 = 127.0.0.1:5551
+node2 = 127.0.0.1:5552
+node3 = 127.0.0.1:5553
 
 [General]
-N: 4
-f: 1
-e: 0
-storage_location: ./.storage/
-storage_size: 10
+n = 4
+f = 1
+e = 0
+storage_location = ./.storage/
+storage_size = 10
+
