Update default.ini to match latest config version

--- a/config/default.ini
+++ b/config/default.ini
@@ -1,6 +1,8 @@
 [General]
 f = 1
 e = 0
-storage_location = /storage/
-storage_size = 10
+storage_location = ./.storage/
+max_clients = 10
+concurrent_clients = 5
+queue_size = 10
 gossip_freq = 1
